# CasADiTO

./: .gitignore  SRBFlip.py  SRBterrain.py  backFlip.py  collocationMain.py  collocationMain2.py  collocationMain3.py  collocationMain4.py  collocationMain4_vis.py  cppResultVis.py  directMain.py  directMain_vis.py  environment.yml  main.py  mathUtil.py  model.py  modelIdentification.py  modelReduced.py  model_bak.py  optimain.py  optimain_vis.py  policyOptMain.py  policyOptimizer.py  readme.md  sideFlip.py  sideJump.py  sideStand.py  simpleInvWBCMain.py  simpleWBCMain.py  stand.py  testModel.py  testModel2.py  testModel3.py  tmpCheckSRB.py  trajOptimizer.py  trajOptimizerHelper.py  vis.py  visSideRobot.py
codogs/: codogplain.py  dogmpc.py  dragboxPlanner.py  dragtoy.py  heavyRopeLoad.py  readme.md  testmodel.py  visulize.py
codogs/cpp/: CMakeLists.txt  hrlDyn.cpp  hrlDyn.h  main.cpp  testHrl.cpp  tonlp.cpp  tonlp.h
codogs/dogMPC/: CMakeLists.txt  dogController.cpp  dogController.h  testdogController.cpp  tonlp.cpp  tonlp.h
codogs/localPlanner/: CMakeLists.txt  localPlanner.cpp  localPlanner.h  testLocalPlanner.cpp  tonlp.cpp  tonlp.h  util.h
codogs/model/: heavyRopeLoad.py
cppIpopt/: CMakeLists.txt  main.cpp  tonlp.cpp  tonlp.h  util.h
data/analy/facSideflipSpeed/: 2021-05-25-11_21_55.json  2021-05-25-11_53_09.json  2021-05-25-13_51_04.json  2021-05-25-14_12_09.json  readme.md
data/robotConfigs/: JYMv2.yaml  JYminiLite.yaml  JYminiLitev2.yaml  robot1.yaml
docs/chinese/: readme.md
initializer/: polynomInit.py
log/: 21-4-19_范围约束对于解的影响.md
model/: articulateBody.py  articulateFullBody.py  fullBodyDynamics.py  fullDynamicsBody.py  kinoDynamics.py  leggedRobot2D.py  leggedRobotX.py  leggedRobotX_bak.py  singleRigidBody.py  urdfReader.py
optGen/: helpers.py  optGen.py  solutionLoader.py  trajOptSRB.py  trajOptimizer.py  util.py
optmain/: wheelJump.py
pendulum/: main.py  modelIdentification.py  pendulumModel.py  trajOptimization.py
trajCrafter/: readme.md  trajCrafter.py
utils/: caUtil.py  mathUtil.py
